# ia-project-course

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py
frontend/: .env.example  index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  WelcomePage.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css
